--- a/01/index.html
+++ b/01/index.html
@@ -7,7 +7,8 @@
         </style>
     </head>
     <body>
-        <div id="root" class="container">
+        <div id="root" class="container"
+            <h2 class="title"> Vue Basics </h2>
             <div>
                 <button v-on:click='toggleLoading'> Click Button A1 </botton>
                 <button @click='toggleLoading'> Click Button A2 </botton>
