--- a/04/index.html
+++ b/04/index.html
@@ -8,8 +8,11 @@
     </head>
     <body>
         <div id="root" class="container">
-            <message title="Hello World" body="Lorem ipsum..."></message>
-            <message title="Hello World" body="Lorem ipsum..."></message>
+            <modal v-if="showModal" @close="showModal = false">
+                <p> Lorem ipsum dolar sit amet, consectetur... </p>
+            </modal>
+    
+            <button @click="showModal = true">Show Modal</button>
         </div>
 
         <script src="https://unpkg.com/vue@2.1.3/dist/vue.js"></script>
